# OneWayQR

./: .gitignore  README.md  README.zh.md  SECURITY.md  pyproject.toml  requirements.md
src/onewayqr/: chunker.py  cli.py  config.py  fec.py  receiver.py  sender.py
src/qrcode_com/: __init__.py  cli.py  frames.py  models.py  qrencode.py
